# sistema-mensageria-distribuida

./: CMakeLists.txt  Mensageria.sln  Program.cs  README.md
Logs/: ReceiveLog.txt  SendLog.txt
Models/: Client.cs  LogicalClock.cs  Message.cs
Services/: MessageBuffer.cs
include/: buffer_mensagens.hpp  logger.hpp  mensagem.hpp  proxy_cliente.hpp  relogio_logico.hpp  servidor_mensagens.hpp
scr/cliente/: cliente.cpp
scr/servidor/: servidor_mensagens.cpp
tests/integracao/: test_servidor.cpp
tests/unitarios/: test_relogio.cpp
